
Version 6.04  2019-12-05
 * storage_report_ip_changed ignore result EEXIST
 * use get_gzip_command_filename from libfastcommon v1.42
 * support compress error log and access log
 * disk recovery support multi-threads to speed up
 * bugfix: init pReader->binlog_buff.version/length to 0

  NOTE: you MUST upgrade libfastcommon to V1.42 or later


Version 6.03  2019-11-20
 * dual IPs support two different types of inner (intranet) IPs
 * storage server request tracker server to change it's status
   to that of tracker leader when the storage server found 
   it's status inconsistence
 * bugfix: fdfs_monitor fix get index of the specified tracker server
 * storage server write to data_init_flag and mark file safely
   (write to temp file then rename)
 * code refine: combine g_fdfs_store_paths and g_path_space_list,
   and extent struct FDFSStorePathInfo
 * check store path's mark file to prevent confusion
 * new selected tracker leader do NOT notify self by network
 * larger network_timeout for fetching one-store-path binlog
   when disk recovery
 
  NOTE: the tracker and storage server must upgrade together


Version 6.02  2019-11-12
 * get_file_info calculate CRC32 for appender file type
 * disk recovery download file to local temp file then rename it
   when the local file exists
 * support regenerate filename for appender file
   NOTE: the regenerated file will be a normal file!


Version 6.01  2019-10-25
 * compress and uncompress binlog file by gzip when need,
   config items in storage.conf: compress_binlog and compress_binlog_time
 * bugfix: must check and create data path before write_to_pid_file
   in fdfs_storaged.c


Version 6.00  2019-10-16
 * tracker and storage server support dual IPs
   1. you can config dual tracker IPs in storage.conf and client.conf,
      the configuration item name is "tracker_server"
   2. you can config dual storage IPs in storage_ids.conf
  more detail please see the config files.
